--- a/src/components/note/DraggableNote.module.scss
+++ b/src/components/note/DraggableNote.module.scss
@@ -1,12 +1,12 @@
 .note {
-  width: 100px;
-  height: 100px;
   position: absolute;
-  border-radius: 5px;
-  border: 2px solid red;
-  background: yellow;
+
+  img {
+    width: 100px;
+    height: 100px;
+  }
 }
 
 .dragging {
-  border: 2px solid green;
+  border: 2px solid red;
 }
