--- a/src/components/note/DraggableNote.module.scss
+++ b/src/components/note/DraggableNote.module.scss
@@ -32,7 +32,9 @@
                   rgba(195, 229, 244, 1) 100%
   );
   min-width: 100px;
+  max-width: 500px;
   min-height: 100px;
+  max-height: 500px;
 
   display: flex;
   justify-content: center;
