Introduce a clean up function that removes style attributes on input

--- a/src/components/editor/Editor.module.scss
+++ b/src/components/editor/Editor.module.scss
@@ -1,8 +1,9 @@
 .editor {
-  margin: 20px;
+  //margin: 20px;
   border: 1px dashed black;
   width: 600px;
   min-height: 100px;
+  white-space: pre-wrap;
 
 
   // Push the following content down a bit
