--- a/src/components/app/custom.scss
+++ b/src/components/app/custom.scss
@@ -1,1 +1,10 @@
 @import '~bootstrap/scss/bootstrap.scss';
+
+//:root {
+//  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+//  --bs-body-font-family: var(--bs-font-sans-serif);
+//}
+//
+//body {
+//  font-family: var(--bs-body-font-family);
+//}
